--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
 <style>
   body { margin: 0; font-family: system-ui, sans-serif; background:#0b0b0b; color:#eaeaea; }
   .wrap { display: grid; grid-template-columns: 1fr 320px; height: 100vh; }
-  .stage { display:flex; align-items:center; justify-content:center; }
+  .stage { position: relative; background:#000; }
+  canvas { width: 100%; height: 100%; display: block; }
   .pane { border-left: 1px solid #222; display:flex; flex-direction:column; }
   .log { flex:1; padding:10px; background:#111; color:#97f59c; overflow:auto; font:12px/1.4 ui-monospace, SFMono-Regular, Menlo, monospace; }
   form { display:flex; border-top:1px solid #222; }
@@ -13,13 +14,18 @@
   h1 { font-size:16px; margin:10px; }
   .tag { color:#aaa; }
   .log p { margin: 0 0 6px; }
+  .overlay { position:absolute; top:10px; left:10px; color:#eaeaea; font-size:12px; background:rgba(0,0,0,0.35); padding:6px 8px; border-radius:6px; pointer-events:none; }
+  .hud { position:absolute; top:10px; right:10px; color:#eaeaea; font:12px ui-monospace, SFMono-Regular, Menlo, monospace; background:rgba(0,0,0,0.35); padding:6px 8px; border-radius:6px; pointer-events:none; min-width:120px; text-align:right; }
 </style>
 <div class="wrap">
   <div class="stage">
-    <div>
-      <h1>Room: <span id="room" class="tag"></span></h1>
-      <p>Тут потім з’явиться канвас/3D. Зараз тестуємо кімнати й чат.</p>
+    <canvas id="renderCanvas"></canvas>
+    <div class="overlay">
+      <div>Room: <span id="room" class="tag"></span></div>
+      <div>Клік для захоплення миші. WASD — рух, Space/Ctrl — вгору/вниз.</div>
+      <div>ЛКМ по кубу — штовхнути його.</div>
     </div>
+    <div class="hud"><span id="fps">FPS: --</span></div>
   </div>
   <div class="pane">
     <div class="log" id="log"></div>
@@ -29,4 +35,6 @@
     </form>
   </div>
 </div>
-<script src="/client.js"></script>
+<script src="https://cdn.babylonjs.com/babylon.js"></script>
+<script src="https://cdn.babylonjs.com/havok/HavokPhysics_umd.js"></script>
+<script type="module" src="/main.js"></script>
